<package>
  <name>hector_laserscan_to_pointcloud</name>
  <version>0.0.0</version>
  <description>hector_laserscan_to_pointcloud</description>
  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hector_laserscan_to_pointcloud</url>

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
